<resources>
    <string name="app_name">CustomizedFontExamples</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lbl_main_legacy">Legacy</string>
    <string name="lbl_legacy_sub">Font in Legacy Way</string>
    <string name="lbl_main_xml">Font in XML</string>
    <string name="lbl_xml_sub_resource_in_xml">Defining in XML</string>
    <string name="lbl_xml_sub_programmatically">Programmatically</string>
    <string name="lbl_main_downloadable">Downloadable Fonts</string>
    <string name="lbl_downloadable_sub_studio">via Android Studio</string>
    <string name="lbl_downloadable_sub_xml">Defining in XML</string>
    <string name="lbl_downloadable_programmatically">Programmatically</string>
    <string name="lbl_downloadable_sub_support">Support Library</string>
    <string name="nav_header_title">AndiGeeky</string>
    <string name="nav_header_mail">gelaneem@gmail.com</string>
    <string name="quote1">Everyone has a story to tell. Everyone is a writer, some are written in the books and some are confined to hearts</string>
    <string name="quote2">Always do your best. What you plant now, you will harvest later.</string>
    <string name="quote3">Optimism is the faith that leads to achievement. Nothing can be done without hope and confidence.</string>
    <string name="quote4">Put your heart, mind, and soul into even your smallest acts. This is the secret of success.</string>
    <string name="quote5">It is during our darkest moments that we must focus to see the light.</string>
    <string name="msgNote">As you can see we have not added this font to our apk, still it will get downloaded
        by Android system when user launches an application.<br/> If System is not able to download font, Default font will be shown.</string>
    <string name="titleQuote1">EncodeSansExpanded-Light</string>
    <string name="titleQuote2">EncodeSansExpanded-Regular</string>
    <string name="titleQuote3">EncodeSansExpanded-Medium</string>
    <string name="titleQuote4">EncodeSansExpanded-SemiBold</string>
    <string name="titleQuote5">EncodeSansExpanded-Bold</string>
    <string name="msg_font_in_xml_o">Font applied using XML File</string>
    <string name="msg_font_in_xml_programmatically">Font applied Programmatically in Fragment</string>
    <string name="msg_font_legacy">Font applied by getting typeface from Asset Folder in legacy way</string>
    <string name="msg_font_downloadable_using_xml">Font applied by downloading and defining in xml </string>
    <string name="msg_font_downloadable_programmatically">Font applied by downloading programmatically </string>
    <string name="lbl_btn_apply_font">Apply Font</string>
    <string name="lbl_radio_font1">Dosis</string>
    <string name="lbl_radio_font2">Josefin Sans</string>
    <string name="lbl_radio_font3">Lobster</string>
    <string name="msg_font_request_failed">Font Downloading failed</string>
</resources>
