<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/quote1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="64dp"/>


    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="0dp"
        android:text="@string/titleQuote1"
        app:layout_constraintBottom_toTopOf="@+id/textFont"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"/>

    <Button
        android:id="@+id/btnApplyFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_apply_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/radio_font_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textFont">

        <RadioButton
            android:id="@+id/radioButtonDosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:checked="true"
            android:text="@string/lbl_radio_font1"/>

        <RadioButton
            android:id="@+id/radioButtonJosephin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/lbl_radio_font2"/>

        <RadioButton
            android:id="@+id/radioButtonLobster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_radio_font3"/>
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnApplyFont"/>


</android.support.constraint.ConstraintLayout>